--- a/ds421_ret_r_code.Rmd
+++ b/ds421_ret_r_code.Rmd
@@ -13,6 +13,8 @@ library(raster)
 library(tigris)
 library(sf)
 
+options("scipen" = 40)
+
 praise()  # self-esteem boost
 
 ```
@@ -537,7 +539,8 @@ school_enrollment_tab_reader <-
           file.path(
             "raw_data", 
             file_name),
-        delim = "\t"
+        delim = "\t", 
+        col_types = cols(.default = "?", CDS_CODE = col_double())
         )
     
     assign(variable_name, 
@@ -558,6 +561,14 @@ school_enrollment_tab_reader <-
     # return(read_tibble)
   }
 
+# make vector of starting years 2009-2018
+start_years <- 
+  seq(
+    from = 2009,
+    to = 2018, 
+    by = 1
+  )
+
 # use function on all files
 map(
   .f = school_enrollment_tab_reader, 
@@ -567,10 +578,36 @@ map(
 ```
 
 
+```{r read and save school addresses}
+
+# read school addresses into tibble
+public_school_directory_working_from_raw <-
+  read_delim(file =
+               file.path(
+                 "raw_data",
+                 "public_school_directory.txt"
+                 ),
+             delim = "\t", 
+             col_types = cols(.default = "?", CDSCode = col_double())
+             )
+
+# save school addresses
+save(
+  public_school_directory_working_from_raw, 
+  file = 
+    file.path(
+      "intermediate_data", 
+      "public_school_directory_working_from_raw.rdata"
+    )
+)
+
+```
+
+
 ```{r make tibbles for 2015-2016 and 2016-2017}
 
 # load relevant files
-## 2015-16
+## 2015-16 enrollment
 load(
   file = 
     file.path(
@@ -580,12 +617,21 @@ load(
 )
 
 # load relevant files
-## 2016-17
+## 2016-17 enrollment
 load(
   file = 
     file.path(
       "intermediate_data", 
       "school_enrollment_2016_17_working_from_raw.rdata"
+    )
+)
+
+## school addresses
+load(
+  file = 
+    file.path(
+      "intermediate_data", 
+      "public_school_directory_working_from_raw.rdata"
     )
 )
 
@@ -605,28 +651,74 @@ school_enrollment_2015_16_working <-
 school_enrollment_2016_17_working <- 
   column_name_fixer(school_enrollment_2016_17_working_from_raw)
 
-```
+public_school_directory_working <- 
+  column_name_fixer(public_school_directory_working_from_raw)
 
+school_lat_long <- 
+  public_school_directory_working %>% 
+  dplyr::select(cds_code = cdscode, latitude, longitude)
+  
+# get cds codes for schools with nonzero enrollment in 2015-16
+school_cds_codes_2015_16 <- 
+  school_enrollment_2015_16_working %>% 
+  filter(enr_total > 0) %>% 
+  dplyr::select(cds_code, school) %>% 
+  unique()
 
-```{r read and save school addresses}
+# get cds codes for schools with nonzero enrollment in 2016-17
+school_cds_codes_2016_17 <- 
+  school_enrollment_2015_16_working %>% 
+  filter(enr_total > 0) %>% 
+  dplyr::select(cds_code, school) %>% 
+  unique()
 
-# read school addresses into tibble
-public_school_directory <-
-  read_delim(file =
-               file.path(
-                 "raw_data",
-                 "public_school_directory.rdata"
-                 ),
-             delim = "\t"
-             )
+# join school and latitude/longitude
+school_lat_long_2015_16 <- 
+  school_cds_codes_2015_16 %>% 
+  left_join(school_lat_long, by = "cds_code")
+  
+school_lat_long_2016_17 <- 
+  school_cds_codes_2016_17 %>% 
+  left_join(school_lat_long, by = "cds_code")
 
-# save school addresses
+# two without lat/long
+## Gateway to College, San Francisco Unified, 50 Phelan Avenue Science Hall, Room 127, San Francisco, CA 94112-1821
+### manually found lat/long via Google Maps: 37.724958, -122.452911
+## Academy of Arts and Sciences: Los Angeles (9-12) 17500 Burbank Blvd. Encino, CA 91361-1718 
+### manually found lat/long via Google Maps: 34.172299, -118.514622
+
+# fix outliers
+## 2015-16
+### Gateway to College, CDS code 38684780128876
+school_lat_long_2015_16$latitude[school_lat_long_2015_16$cds_code == 38684780128876] <- 37.724958
+school_lat_long_2015_16$longitude[school_lat_long_2015_16$cds_code == 38684780128876] <- -122.452911
+  
+school_lat_long_2016_17$latitude[school_lat_long_2015_16$cds_code == 38684780128876] <- 37.724958
+school_lat_long_2016_17$longitude[school_lat_long_2015_16$cds_code == 38684780128876] <- -122.452911
+
+## 2016-17
+### Academy of Arts and Sciences: Los Angeles (9-12)
+school_lat_long_2015_16$latitude[school_lat_long_2015_16$cds_code == 19753090130781] <- 34.172299
+school_lat_long_2015_16$longitude[school_lat_long_2015_16$cds_code == 19753090130781] <- -118.514622
+
+school_lat_long_2016_17$latitude[school_lat_long_2015_16$cds_code == 19753090130781] <- 34.172299
+school_lat_long_2016_17$longitude[school_lat_long_2015_16$cds_code == 19753090130781] <- -118.514622
+
 save(
-  public_school_directory, 
+  school_lat_long_2015_16, 
   file = 
     file.path(
       "intermediate_data", 
-      "public_school_directory.rdata"
+      "school_lat_long_2015_16.rdata"
+    )
+)
+
+save(
+  school_lat_long_2016_17, 
+  file = 
+    file.path(
+      "intermediate_data", 
+      "school_lat_long_2016_17.rdata"
     )
 )
 
